# Amber

./: .env.example  .gitignore  .pre-commit-config.yaml  =2.7.0  LICENSE  PIPELINE_TEST_RESULTS.md  README.md  TESTING.md  UI_INTEGRATION_TEST_RESULTS.md  UI_INTEGRATION_VERIFIED.md  amber_tenant_role_model_proposal.md  bug-hunt-report-2026-01-03.md  docker-compose.gpu.yml  docker-compose.yml  fix_milvus.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-core.txt  requirements-ocr.txt  requirements-optional.txt  requirements.txt  run_integration_suite.sh  start.sh  test_detail.txt  test_detail_fallback.txt  test_detail_pymupdf.txt  test_output.txt  test_retrieval_chat.py  verify_extraction.py  wipe_data.py
.github/workflows/: quality-gate.yml
alembic/: env.py
alembic/versions/: 20260108_1254_023abc5b6e16_add_api_keys_table.py  20260109_1420_f40c9184d431_create_connector_states_table.py  20260112_1200_a1b2c3d4e5f6_add_folders_table.py  20260116_1450_add_missing_document_statuses.py  20260121_1237_add_graph_edit_history.py
config/: settings.yaml
docker/: api.Dockerfile  entrypoint.sh  worker.Dockerfile
docs/: API_ENDPOINTS.md  CHANGELOG-ArchitectureEvo.md  CHANGELOG.md  CONNECTORS.md  FEEDBACK_SYSTEM.md  TENANT_ROLE_MODEL.md  TESTING.md  agentic-retrieval.md  determinism_report.md  graph_sync_optimization_plan.md  ui-kit-fix-log.md  ui-kit.md
docs/architecture/: onboarding.md
docs/architecture/adr/: template.md
docs/plans/: 2026-01-23-architecture-remediation-design.md  2026-01-23-architecture-remediation.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx  routes.tsx
frontend/src/hooks/: useFuzzySearch.ts  useNotification.ts  useTitleProgress.ts
frontend/src/lib/: api-admin.ts  api-client.ts
frontend/src/styles/: globals.css
frontend/src/types/: react-force-graph-3d.d.ts
frontend/test-results/: .last-run.json
frontend/test-results/pipelines-Amber-2-0-Pipeli-eb702-on-Pipeline-Document-Upload-chromium/: error-context.md
scripts/: backfill_embeddings.py  backfill_llm_model.py  check_amber_default.py  check_amber_default_schema.py  check_doc_constructs.py  check_edges.py  check_integrity.py  check_system_state.py  check_tenants.py  cleanup_orphans.py  cleanup_verification_data.py  count_all_similarities.py  create_default_tenant.py  debug_key_hash.py  debug_neo4j_doc.py  debug_neo4j_strict.py  debug_retrieval_repro.py  debug_search_manual.py  inspect_milvus_data.py  investigate_relationships.py  link_super_keys.py  list_milvus_collections.py  seed_test_data.py  simulate_startup.py  stop_all_jobs.py  storage_compare.py  storage_manifest.py  storage_sync.sh  update_tenant_name.py  verify.sh  verify_chap1_determinism.py  verify_chat_deletion.py  verify_chat_permissions.py  verify_delete_actions.py  verify_fix_service.py  verify_ingestion_metrics.py  verify_ingestion_progress.py  verify_llm_settings.py  verify_logging_v2.py  verify_setup_fix.py  (+2 more)
src/amber_platform/: composition_root.py
src/api/: config.py  deps.py  main.py
src/api/middleware/: auth.py  exceptions.py  rate_limit.py
src/api/routes/: auth.py  chat.py  chunks.py  communities.py  connectors.py  documents.py  events.py  export.py  feedback.py  folders.py  graph_editor.py  graph_history.py  health.py  (+3 more)
src/core/: health.py  rate_limiter.py
src/platform/: __init__.py  composition_root.py
src/scripts/: backfill_costs.py  check_doc_status.py  check_pdf_content.py  check_settings.py  debug_openai_stream.py  debug_rag.py  init_resources.py  maintain_graph.py  test_summarizer.py
src/shared/: error_handling.py  llm_capacity.py  messages.py  model_registry.py  provider_models.py  security.py
src/workers/: backup_tasks.py  celery_app.py  export_tasks.py  recovery.py  task_management.py  tasks.py
tests/: conftest.py  verify_hybrid_search_deps.py  verify_milvus_connection.py
tests/api/: test_llm_steps_config.py  test_startup_integrity.py
tests/integration/: README.md  UI_TESTING.md  conftest.py  test_advanced_extraction.py  test_api.py  test_chat_pipeline.py  test_chunking.py  test_classification.py  test_community_pipeline.py  test_cost_tracking.py  test_export_api.py  test_extraction_flow.py  test_feedback_workflow.py  test_folder_pipeline.py  test_global_graph_api.py  test_graph_pipeline.py  test_ingestion_flow.py  test_ingestion_pipeline.py  test_observability.py  test_phase_7_integration.py  test_pipeline_manual.sh  test_retrieval.py  test_retrieval_service.py  test_similarity.py  test_storage_backend_compatibility.py  test_ui_integration.sh  test_url_connectors.py  verify_streaming.py
tests/load/: locustfile.py
tests/regression/: test_retrieval_quality.py
tests/scripts/: verify_isolation.py  verify_neo4j.py
tests/security/: test_graph_security.py  test_injection.py  test_pii.py  test_remediation.py
tests/unit/: test_active_vector_collection.py  test_active_vector_collection_backfill_route.py  test_active_vector_collection_update_guard.py  test_api_key_service_active_collection.py  test_carbonio_disambiguation.py  test_carbonio_search.py  test_circuit_breaker.py  test_citation_verifier.py  test_community_services.py  test_concurrency_governor.py  test_context_builder.py  test_default_tenant_config.py  test_export_service.py  test_extraction_cache.py  test_feedback_analysis.py  test_feedback_export.py  test_fusion.py  test_generation_llm_steps.py  test_generation_service.py  test_graph_extractor.py  test_graph_processor.py  test_graph_provider.py  test_graph_sync_config.py  test_graph_traversal.py  test_graph_writer.py  test_identifiers.py  test_ingestion_llm_step_config.py  test_ingestion_service_event_dispatcher.py  test_ingestion_vector_collection.py  test_llm_model_backfill.py  test_llm_model_resolver.py  test_llm_settings_global_apply.py  test_llm_steps.py  test_memory_manager.py  test_model_registry_resolution.py  test_ollama_embeddings.py  test_provider_factory_ambiguity.py  test_provider_factory_model_override.py  test_provider_registry_defaults.py  test_providers.py  (+17 more)
(+379 files in other folders)
