[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amber"
version = "0.0.1-alpha"
description = "Amber - Hybrid GraphRAG System for Contextual Intelligence"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "GraphRAG Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "sse-starlette>=2.0.0",
    
    # Configuration & Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0",
    
    # Database - PostgreSQL
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    
    # Database - Neo4j
    "neo4j>=5.15.0",
    
    # Database - Milvus
    "pymilvus>=2.3.4",
    
    # Cache & Message Broker
    "redis>=5.0.0",
    "celery[redis]>=5.3.0",
    
    # HTTP Client
    "httpx>=0.26.0",
    
    # LLM Providers
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    
    # Utilities
    "python-dateutil>=2.8.2",
    "tenacity>=8.2.0",
    
    
    # Storage
    "minio>=7.2.0",

    # Extraction
    "pymupdf4llm>=0.0.1",
    "unstructured[all-docs]>=0.12.0",
    "mistralai>=0.1.0",
    "marker-pdf>=0.2.0",
    "tiktoken>=0.5.0",
    
    # HTTP Client
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "testcontainers[postgres,neo4j,minio]>=3.7.1",
]

[project.urls]
"Homepage" = "https://github.com/graphrag/graphrag"
"Bug Reports" = "https://github.com/graphrag/graphrag/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
