[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amber"
version = "1.0.0a"
description = "Amber - Hybrid GraphRAG System for Contextual Intelligence"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "GraphRAG Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "sse-starlette>=2.0.0",
    
    # Configuration & Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0",
    
    # Database - PostgreSQL
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    
    # Database - Neo4j
    "neo4j>=5.15.0",
    
    # Database - Milvus
    "pymilvus>=2.3.4",
    
    # Cache & Message Broker
    "redis>=5.0.0",
    "celery[redis]>=5.3.0",
    
    # HTTP Client
    "httpx>=0.26.0",
    
    # LLM Providers
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    
    # Utilities
    "python-dateutil>=2.8.2",
    "tenacity>=8.2.0",
    
    
    # Storage
    "minio>=7.2.0",

    # Extraction
    "pymupdf4llm>=0.0.1",
    "unstructured[all-docs]>=0.12.0",
    "mistralai>=0.1.0",
    "marker-pdf>=0.2.0",
    "tiktoken>=0.5.0",
    
    # HTTP Client
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "testcontainers[postgres,neo4j,minio]>=3.7.1",
    "import-linter>=2.0",
]

[project.urls]
"Homepage" = "https://github.com/graphrag/graphrag"
"Bug Reports" = "https://github.com/graphrag/graphrag/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

# Import Linter - Architecture Boundary Rules (Phase 0)
# Run with: poetry run lint-imports
[tool.importlinter]
root_package = "src"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Domain Layer must be independent"
type = "forbidden"
source_modules = [
    "src.core.ingestion.domain",
    "src.core.retrieval.domain",
    "src.core.generation.domain",
    "src.core.graph.domain",
    "src.core.tenants.domain",
    "src.core.admin_ops.domain"
]
forbidden_modules = [
    "src.core.ingestion.infrastructure",
    "src.core.retrieval.infrastructure",
    "src.core.generation.infrastructure",
    "src.core.graph.infrastructure",
    "src.core.tenants.infrastructure",
    "src.core.admin_ops.infrastructure",
    "src.api",
    "src.workers",
    "src.platform",
    # "sqlalchemy", # Allowed (Active Record Pattern)
    "pymilvus",
    "neo4j",
    "minio"
]

[[tool.importlinter.contracts]]
name = "Infrastructure must not be imported by Application or Domain"
type = "forbidden"
source_modules = [
    "src.core.ingestion.application",
    "src.core.retrieval.application",
    "src.core.generation.application",
    "src.core.graph.application",
    "src.core.tenants.application",
    "src.core.admin_ops.application",
]
forbidden_modules = [
    "src.core.ingestion.infrastructure",
    "src.core.retrieval.infrastructure",
    "src.core.generation.infrastructure",
    "src.core.graph.infrastructure",
    "src.core.tenants.infrastructure",
    "src.core.admin_ops.infrastructure",
]
ignore_imports = [
    # Allow Application to import Infrastructure EXCEPTIONS or specific helpers if absolutely needed,
    # but generally this should be blocked.
    # For now, we'll start strict.
]

[[tool.importlinter.contracts]]
name = "Core contexts must not depend on API"
type = "forbidden"
source_modules = ["src.core"]
forbidden_modules = ["src.api"]
# ignore_imports = [] # All clean!

[[tool.importlinter.contracts]]
name = "Core must not depend on composition root"
type = "forbidden"
source_modules = ["src.core"]
forbidden_modules = ["src.amber_platform"]

[[tool.importlinter.contracts]]
name = "Shared Kernel should not depend on Core or API"
type = "forbidden"
source_modules = ["src.shared"]
forbidden_modules = ["src.core", "src.api"]
